    * FEATURE: add index.deleteObjects()
    * FIX: waitTask failure case when using promises, was not going through
    * FEATURE: add index.deleteByQuery()
    * FEATURE (Node.js): add client.enableRateLimitForward()
    * FEATURE (Node.js): add client.disableRateLimitForward()
    * FEATURE (Node.js): add client.useSecuredAPIKey()
    * FEATURE (Node.js): add client.disableSecuredAPIKey()


2015-10-04  3.0.7
    * MIGRATION: throw on V2 .search() usage:
      - .search(query, cb, params)
      - .search(cb, params)
    * FEATURE: add client.destroy() in Node.js implementation
      will destroy all keepalived connections and let the process exits if needed

2015-03-04  3.0.6
    * FIX: Webpack compatibility by removing packageify
      webpack does not interprets for now node_modules/* browserify transforms
    * MISC: add release script

2015-02-04  3.0.5
    * FIX: lower the build size by requiring the good version/browser.js in browser
      builds. Previously we got the full `package.json` inlined

2015-02-04  3.0.4
    * FIX: Defaults to http when the protocol of the page is not http or
      https
    * FIX: XDomainRequests no more aborted in IE9 #76

2015-28-03  3.0.3

    * FIX: Handle module loaders + cdn.jsdelivr.net/algoliasearch/latest usage
      When in this situation, the module loader would prevent the code
      detecting and loading the V2 to execute.
      Now fixed by prepending the migration-layer to the browserify bundle.
      It also removes the migration-layer code from the package managers (npm, bower) builds,
      where it makes no sense to have it
    * FIX: load V2 using a DOMElement when V3 is loaded ASYNCHRONOUSLY with /latest/
      * tested on all majors browsers:
        Chrome stable
        Firefox stable
        IE 8, 9, 10, 11
      * tested on correponding customer websites
    * FIX: better warning messages when using `latest` or trying to use V3 as V2

2015-26-03  3.0.2
