@@ -8,7 +8,7 @@ var Promise = global.Promise || require('es6-promise').Promise;
 
 var AlgoliaSearch = require('../../AlgoliaSearch');
 var inlineHeaders = require('../inline-headers');
-var JSONPRequest = require('../jsonp-request');
+var JSONPRequest = require('../JSONP-request');
 
 function algoliasearch(applicationID, apiKey, opts) {
   var extend = require('extend');
