@@ -11,7 +11,8 @@ UNREALEASED
     * FEATURE (Node.js): add client.disableRateLimitForward()
     * FEATURE (Node.js): add client.useSecuredAPIKey()
     * FEATURE (Node.js): add client.disableSecuredAPIKey()
-
+    * BREAKING CHANGE (Node.js): client.setTimeout renamed to client.setRequestTimeout
+    * TEST: add test around setRequestTimeout
 
 2015-10-04  3.0.7
     * MIGRATION: throw on V2 .search() usage:
